--- a/MyTimeLine/Base.lproj/Main.storyboard
+++ b/MyTimeLine/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                             </connections>
                         </searchBar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellText" rowHeight="318" id="x5Y-dq-t5i">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TimelineCell" rowHeight="318" id="x5Y-dq-t5i" customClass="TimelineCell" customModule="MyTimeLine" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="72" width="375" height="318"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="x5Y-dq-t5i" id="urE-Id-c7w">
@@ -88,6 +88,11 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="bodyLabel" destination="A8g-vl-Xo0" id="jCd-2c-6FR"/>
+                                    <outlet property="imageView1" destination="JFG-Xf-ZM7" id="oAy-cQ-gqS"/>
+                                    <outlet property="imageView2" destination="3VM-GU-g08" id="w9Q-Tg-cQb"/>
+                                    <outlet property="imageView3" destination="uZp-W8-ZUK" id="FXc-n4-fJb"/>
+                                    <outlet property="timestampLabel" destination="MTd-Tn-Dtv" id="u9L-DV-s2M"/>
                                     <segue destination="YFn-qF-ocb" kind="show" id="KhM-ha-jjx"/>
                                 </connections>
                             </tableViewCell>
@@ -100,7 +105,9 @@
                     <navigationItem key="navigationItem" title="Timeline" id="D1I-4G-C8e">
                         <barButtonItem key="rightBarButtonItem" systemItem="compose" id="768-cZ-dDu">
                             <connections>
-                                <segue destination="nxi-so-o4G" kind="show" id="Hpn-dE-5fx"/>
+                                <segue destination="nxi-so-o4G" kind="popoverPresentation" popoverAnchorBarButtonItem="768-cZ-dDu" id="wpZ-qt-FzD">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES"/>
+                                </segue>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -121,46 +128,82 @@
             </objects>
             <point key="canvasLocation" x="258" y="883"/>
         </scene>
-        <!--New Post-->
+        <!--Compose-->
         <scene sceneID="FTA-dt-MuN">
             <objects>
-                <viewController title="New Post" id="nxi-so-o4G" customClass="ComposeViewController" customModule="MyTimeLine" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ComposeView" title="New Post" id="nxi-so-o4G" userLabel="Compose" customClass="ComposeViewController" customModule="MyTimeLine" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fsA-jd-lAj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="JPj-4S-d4R">
-                                <rect key="frame" x="16" y="72" width="343" height="128"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="hNa-Mo-nPM"/>
-                                </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RZB-Vr-1WJ">
-                                <rect key="frame" x="16" y="208" width="343" height="110"/>
+                                <rect key="frame" x="16" y="216" width="343" height="110"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="110" id="CXU-Q9-gli"/>
                                 </constraints>
                             </stackView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LVi-tu-1ro">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="YEi-Mc-Bgc"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="New Post" id="bxT-ge-ANz">
+                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="ofl-iu-kHE">
+                                            <connections>
+                                                <action selector="didPressCancel:" destination="nxi-so-o4G" id="kU7-Ti-669"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Create" id="vLk-id-qRI">
+                                            <connections>
+                                                <action selector="didPressCreate:" destination="nxi-so-o4G" id="9br-5j-USD"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UZm-Ik-vRB">
+                                <rect key="frame" x="303" y="334" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="E91-Eq-BTq"/>
+                                    <constraint firstAttribute="height" constant="30" id="lis-Zd-CtK"/>
+                                </constraints>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="showImagePicker" destination="nxi-so-o4G" eventType="touchUpInside" id="Vmq-IP-EzF"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="JPj-4S-d4R">
+                                <rect key="frame" x="16" y="80" width="343" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="hNa-Mo-nPM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="cnN-ES-HOr" firstAttribute="trailing" secondItem="RZB-Vr-1WJ" secondAttribute="trailing" constant="16" id="3Vn-RV-eld"/>
+                            <constraint firstItem="UZm-Ik-vRB" firstAttribute="top" secondItem="RZB-Vr-1WJ" secondAttribute="bottom" constant="8" id="3js-2h-fGv"/>
                             <constraint firstItem="RZB-Vr-1WJ" firstAttribute="leading" secondItem="cnN-ES-HOr" secondAttribute="leading" constant="16" id="AVD-S7-G0m"/>
-                            <constraint firstItem="JPj-4S-d4R" firstAttribute="top" secondItem="cnN-ES-HOr" secondAttribute="top" constant="8" id="LCp-4Q-Vp6"/>
+                            <constraint firstItem="LVi-tu-1ro" firstAttribute="leading" secondItem="cnN-ES-HOr" secondAttribute="leading" id="Dfu-tr-hhv"/>
+                            <constraint firstItem="LVi-tu-1ro" firstAttribute="top" secondItem="cnN-ES-HOr" secondAttribute="top" id="Ohc-uW-OEU"/>
+                            <constraint firstItem="JPj-4S-d4R" firstAttribute="top" secondItem="LVi-tu-1ro" secondAttribute="bottom" constant="16" id="QD0-oR-rOR"/>
                             <constraint firstItem="JPj-4S-d4R" firstAttribute="leading" secondItem="cnN-ES-HOr" secondAttribute="leading" constant="16" id="Quk-bF-Mzf"/>
+                            <constraint firstItem="cnN-ES-HOr" firstAttribute="trailing" secondItem="UZm-Ik-vRB" secondAttribute="trailing" constant="42" id="aP1-Bj-aAK"/>
+                            <constraint firstItem="LVi-tu-1ro" firstAttribute="trailing" secondItem="cnN-ES-HOr" secondAttribute="trailing" id="gVc-yK-QVq"/>
                             <constraint firstItem="cnN-ES-HOr" firstAttribute="trailing" secondItem="JPj-4S-d4R" secondAttribute="trailing" constant="16" id="qhe-SR-lyo"/>
                             <constraint firstItem="RZB-Vr-1WJ" firstAttribute="top" secondItem="JPj-4S-d4R" secondAttribute="bottom" constant="8" id="uEJ-EI-gul"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cnN-ES-HOr"/>
                     </view>
-                    <navigationItem key="navigationItem" title="New Post" id="aT8-Uf-ZbX">
-                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="ofl-iu-kHE"/>
-                        <barButtonItem key="rightBarButtonItem" title="Create" id="vLk-id-qRI"/>
-                    </navigationItem>
+                    <connections>
+                        <outlet property="ImageStackView" destination="RZB-Vr-1WJ" id="dfF-ZJ-LN0"/>
+                        <outlet property="composeButton" destination="vLk-id-qRI" id="dUz-7H-LBR"/>
+                        <outlet property="textView" destination="JPj-4S-d4R" id="dfV-2b-0i3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RKa-Jr-RtE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
