--- a/MyTimeLine/Base.lproj/Main.storyboard
+++ b/MyTimeLine/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="cWC-qH-0Ec">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" id="trw-Qz-jkh">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -44,54 +44,41 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A8g-vl-Xo0">
-                                            <rect key="frame" x="16" y="37" width="343" height="81"/>
+                                            <rect key="frame" x="16" y="37" width="343" height="82"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="Cfe-85-yn6"/>
                                             </constraints>
                                             <string key="text">But whatever generation is doing it, whether they’re written by scribes in China or commoners in some European dungeon or simply passed along by a kindly grandfather, these little epigrams of life advice have taught essential lessons. How to respond to adversity. How to think about money. How to meditate on our mortality. How to have courage.</string>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JFG-Xf-ZM7" userLabel="image 1">
-                                            <rect key="frame" x="16" y="126" width="171" height="181"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1H6-iD-bVw" userLabel="imagebox">
+                                            <rect key="frame" x="16" y="127" width="343" height="180"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="181" id="3GV-Il-opq"/>
+                                                <constraint firstAttribute="height" constant="180" id="3bg-KU-4ss"/>
                                             </constraints>
-                                        </imageView>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3VM-GU-g08" userLabel="image 2">
-                                            <rect key="frame" x="187" y="126" width="172" height="90.5"/>
-                                        </imageView>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uZp-W8-ZUK" userLabel="image 3">
-                                            <rect key="frame" x="187" y="216.5" width="172" height="90.5"/>
-                                        </imageView>
+                                        </view>
                                     </subviews>
+                                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstItem="A8g-vl-Xo0" firstAttribute="trailing" secondItem="urE-Id-c7w" secondAttribute="trailingMargin" id="17V-6a-XSo"/>
-                                        <constraint firstItem="uZp-W8-ZUK" firstAttribute="width" secondItem="3VM-GU-g08" secondAttribute="width" id="1Br-7i-JhW"/>
-                                        <constraint firstAttribute="bottom" secondItem="uZp-W8-ZUK" secondAttribute="bottom" constant="10.5" id="9Jo-PS-8Vm"/>
                                         <constraint firstAttribute="trailing" secondItem="MTd-Tn-Dtv" secondAttribute="trailing" constant="15" id="9RA-I7-kvD"/>
-                                        <constraint firstItem="JFG-Xf-ZM7" firstAttribute="leading" secondItem="urE-Id-c7w" secondAttribute="leadingMargin" id="BGU-yB-cQd"/>
                                         <constraint firstItem="MTd-Tn-Dtv" firstAttribute="leading" secondItem="urE-Id-c7w" secondAttribute="leading" constant="16" id="DQj-3W-CmX"/>
                                         <constraint firstItem="A8g-vl-Xo0" firstAttribute="leading" secondItem="urE-Id-c7w" secondAttribute="leadingMargin" id="HbO-2w-fKX"/>
-                                        <constraint firstItem="uZp-W8-ZUK" firstAttribute="height" secondItem="3VM-GU-g08" secondAttribute="height" id="I0d-7v-xuO"/>
-                                        <constraint firstItem="3VM-GU-g08" firstAttribute="leading" secondItem="JFG-Xf-ZM7" secondAttribute="trailing" id="JLr-vr-dhC"/>
-                                        <constraint firstItem="JFG-Xf-ZM7" firstAttribute="bottom" secondItem="urE-Id-c7w" secondAttribute="bottomMargin" id="VRs-hj-idl"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="1H6-iD-bVw" secondAttribute="bottom" id="Mwf-oZ-Tbe"/>
+                                        <constraint firstItem="1H6-iD-bVw" firstAttribute="top" secondItem="A8g-vl-Xo0" secondAttribute="bottom" constant="8" id="Rir-ol-fHF"/>
                                         <constraint firstItem="A8g-vl-Xo0" firstAttribute="top" secondItem="MTd-Tn-Dtv" secondAttribute="bottom" constant="8" id="VTd-Ad-Q2W"/>
-                                        <constraint firstItem="JFG-Xf-ZM7" firstAttribute="top" secondItem="A8g-vl-Xo0" secondAttribute="bottom" constant="8" id="cE9-2j-gsh"/>
-                                        <constraint firstItem="3VM-GU-g08" firstAttribute="width" secondItem="A8g-vl-Xo0" secondAttribute="height" multiplier="172:81" id="cbx-Av-Blm"/>
+                                        <constraint firstAttribute="trailing" secondItem="1H6-iD-bVw" secondAttribute="trailing" constant="16" id="hYs-5W-6kT"/>
                                         <constraint firstItem="MTd-Tn-Dtv" firstAttribute="top" secondItem="urE-Id-c7w" secondAttribute="top" constant="8" id="kIu-lG-IEw"/>
-                                        <constraint firstAttribute="trailing" secondItem="uZp-W8-ZUK" secondAttribute="trailing" constant="16" id="lAT-nx-Z20"/>
-                                        <constraint firstItem="3VM-GU-g08" firstAttribute="top" secondItem="A8g-vl-Xo0" secondAttribute="bottom" constant="8" id="reh-pF-gc0"/>
-                                        <constraint firstItem="uZp-W8-ZUK" firstAttribute="top" secondItem="3VM-GU-g08" secondAttribute="bottom" id="t4J-Kg-iOv"/>
-                                        <constraint firstAttribute="trailing" secondItem="3VM-GU-g08" secondAttribute="trailing" constant="16" id="zqF-5Y-zjZ"/>
+                                        <constraint firstItem="1H6-iD-bVw" firstAttribute="leading" secondItem="urE-Id-c7w" secondAttribute="leading" constant="16" id="tiE-DN-7Ps"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="bodyLabel" destination="A8g-vl-Xo0" id="jCd-2c-6FR"/>
-                                    <outlet property="imageView1" destination="JFG-Xf-ZM7" id="oAy-cQ-gqS"/>
-                                    <outlet property="imageView2" destination="3VM-GU-g08" id="w9Q-Tg-cQb"/>
-                                    <outlet property="imageView3" destination="uZp-W8-ZUK" id="FXc-n4-fJb"/>
+                                    <outlet property="imageBox" destination="1H6-iD-bVw" id="oMp-G0-ZJS"/>
+                                    <outlet property="imageBoxHeight" destination="3bg-KU-4ss" id="YXp-xi-shb"/>
                                     <outlet property="timestampLabel" destination="MTd-Tn-Dtv" id="u9L-DV-s2M"/>
                                     <segue destination="YFn-qF-ocb" kind="show" id="KhM-ha-jjx"/>
                                 </connections>
@@ -126,7 +113,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="258" y="883"/>
+            <point key="canvasLocation" x="256.80000000000001" y="882.90854572713647"/>
         </scene>
         <!--Compose-->
         <scene sceneID="FTA-dt-MuN">
@@ -156,17 +143,6 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UZm-Ik-vRB">
-                                <rect key="frame" x="303" y="334" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="E91-Eq-BTq"/>
-                                    <constraint firstAttribute="height" constant="30" id="lis-Zd-CtK"/>
-                                </constraints>
-                                <state key="normal" title="Add"/>
-                                <connections>
-                                    <action selector="showImagePicker" destination="nxi-so-o4G" eventType="touchUpInside" id="Vmq-IP-EzF"/>
-                                </connections>
-                            </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="JPj-4S-d4R">
                                 <rect key="frame" x="16" y="80" width="343" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -176,13 +152,20 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gvU-XG-fdv">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add image" translatesAutoresizingMaskIntoConstraints="NO" id="dZR-uA-75s" userLabel="Add button image">
+                                <rect key="frame" x="246" y="216" width="113" height="115"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="115" id="2zR-1q-g5h"/>
+                                    <constraint firstAttribute="width" constant="113" id="kj7-QA-L1n"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gvU-XG-fdv">
                                 <rect key="frame" x="16" y="216" width="113" height="115"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zad-Tb-VIB">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zad-Tb-VIB">
                                 <rect key="frame" x="131" y="216" width="113" height="115"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wVJ-h0-SRe">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wVJ-h0-SRe">
                                 <rect key="frame" x="246" y="216" width="113" height="115"/>
                             </imageView>
                         </subviews>
@@ -191,18 +174,17 @@
                             <constraint firstItem="gvU-XG-fdv" firstAttribute="width" secondItem="JPj-4S-d4R" secondAttribute="height" multiplier="113:128" id="6oI-bW-Mr5"/>
                             <constraint firstItem="wVJ-h0-SRe" firstAttribute="width" secondItem="gvU-XG-fdv" secondAttribute="width" id="DTx-Q4-cUe"/>
                             <constraint firstItem="LVi-tu-1ro" firstAttribute="leading" secondItem="cnN-ES-HOr" secondAttribute="leading" id="Dfu-tr-hhv"/>
-                            <constraint firstItem="UZm-Ik-vRB" firstAttribute="top" secondItem="wVJ-h0-SRe" secondAttribute="bottom" constant="3" id="EBj-na-La2"/>
                             <constraint firstItem="Zad-Tb-VIB" firstAttribute="leading" secondItem="gvU-XG-fdv" secondAttribute="trailing" constant="2" id="FHA-VW-SSy"/>
                             <constraint firstItem="Zad-Tb-VIB" firstAttribute="top" secondItem="JPj-4S-d4R" secondAttribute="bottom" constant="8" id="Hkq-ru-ZEt"/>
                             <constraint firstItem="wVJ-h0-SRe" firstAttribute="top" secondItem="JPj-4S-d4R" secondAttribute="bottom" constant="8" id="JHQ-gj-sOo"/>
                             <constraint firstItem="gvU-XG-fdv" firstAttribute="height" secondItem="JPj-4S-d4R" secondAttribute="height" multiplier="0.9" id="LvB-cI-cU6"/>
                             <constraint firstItem="LVi-tu-1ro" firstAttribute="top" secondItem="cnN-ES-HOr" secondAttribute="top" id="Ohc-uW-OEU"/>
                             <constraint firstItem="JPj-4S-d4R" firstAttribute="top" secondItem="LVi-tu-1ro" secondAttribute="bottom" constant="16" id="QD0-oR-rOR"/>
+                            <constraint firstItem="dZR-uA-75s" firstAttribute="top" secondItem="JPj-4S-d4R" secondAttribute="bottom" constant="8" id="QsH-Vs-400"/>
                             <constraint firstItem="JPj-4S-d4R" firstAttribute="leading" secondItem="cnN-ES-HOr" secondAttribute="leading" constant="16" id="Quk-bF-Mzf"/>
+                            <constraint firstItem="cnN-ES-HOr" firstAttribute="trailing" secondItem="dZR-uA-75s" secondAttribute="trailing" constant="16" id="WXB-ZK-bIM"/>
                             <constraint firstItem="Zad-Tb-VIB" firstAttribute="height" secondItem="gvU-XG-fdv" secondAttribute="height" id="Xu2-RI-uXf"/>
-                            <constraint firstItem="cnN-ES-HOr" firstAttribute="trailing" secondItem="UZm-Ik-vRB" secondAttribute="trailing" constant="42" id="aP1-Bj-aAK"/>
                             <constraint firstItem="gvU-XG-fdv" firstAttribute="leading" secondItem="cnN-ES-HOr" secondAttribute="leading" constant="16" id="caQ-R2-fkn"/>
-                            <constraint firstItem="cnN-ES-HOr" firstAttribute="trailing" secondItem="UZm-Ik-vRB" secondAttribute="trailing" constant="42" id="eCW-cG-4cD"/>
                             <constraint firstItem="LVi-tu-1ro" firstAttribute="trailing" secondItem="cnN-ES-HOr" secondAttribute="trailing" id="gVc-yK-QVq"/>
                             <constraint firstItem="cnN-ES-HOr" firstAttribute="trailing" secondItem="wVJ-h0-SRe" secondAttribute="trailing" constant="16" id="hYZ-Se-usV"/>
                             <constraint firstItem="Zad-Tb-VIB" firstAttribute="width" secondItem="gvU-XG-fdv" secondAttribute="width" id="izh-IV-fUO"/>
@@ -214,6 +196,7 @@
                         <viewLayoutGuide key="safeArea" id="cnN-ES-HOr"/>
                     </view>
                     <connections>
+                        <outlet property="addButtonImageView" destination="dZR-uA-75s" id="nS5-HC-toa"/>
                         <outlet property="composeButton" destination="vLk-id-qRI" id="dUz-7H-LBR"/>
                         <outlet property="imageView1" destination="gvU-XG-fdv" id="0hw-JD-jSp"/>
                         <outlet property="imageView2" destination="Zad-Tb-VIB" id="yxU-L7-w9l"/>
@@ -303,4 +286,7 @@
             <point key="canvasLocation" x="-529" y="883"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="add image" width="150" height="150"/>
+    </resources>
 </document>
