--- a/MyTimeLine/Base.lproj/Main.storyboard
+++ b/MyTimeLine/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1H6-iD-bVw" userLabel="imagebox">
-                                            <rect key="frame" x="16" y="127" width="343" height="180"/>
+                                            <rect key="frame" x="0.0" y="127" width="375" height="180"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="180" id="3bg-KU-4ss"/>
                                             </constraints>
@@ -61,9 +61,9 @@
                                         <constraint firstAttribute="bottomMargin" secondItem="1H6-iD-bVw" secondAttribute="bottom" id="Mwf-oZ-Tbe"/>
                                         <constraint firstItem="1H6-iD-bVw" firstAttribute="top" secondItem="A8g-vl-Xo0" secondAttribute="bottom" constant="8" id="Rir-ol-fHF"/>
                                         <constraint firstItem="A8g-vl-Xo0" firstAttribute="top" secondItem="MTd-Tn-Dtv" secondAttribute="bottom" constant="8" id="VTd-Ad-Q2W"/>
-                                        <constraint firstAttribute="trailing" secondItem="1H6-iD-bVw" secondAttribute="trailing" constant="16" id="hYs-5W-6kT"/>
+                                        <constraint firstAttribute="trailing" secondItem="1H6-iD-bVw" secondAttribute="trailing" id="hYs-5W-6kT"/>
                                         <constraint firstItem="MTd-Tn-Dtv" firstAttribute="top" secondItem="urE-Id-c7w" secondAttribute="top" constant="8" id="kIu-lG-IEw"/>
-                                        <constraint firstItem="1H6-iD-bVw" firstAttribute="leading" secondItem="urE-Id-c7w" secondAttribute="leading" constant="16" id="tiE-DN-7Ps"/>
+                                        <constraint firstItem="1H6-iD-bVw" firstAttribute="leading" secondItem="urE-Id-c7w" secondAttribute="leading" id="tiE-DN-7Ps"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
